--- a/pc/UI_ADHPAaM01.html
+++ b/pc/UI_ADHPAaM01.html
@@ -118,75 +118,75 @@
                                                                         <fieldset class="box_chk-group" role="group" aria-labelledby="regionLegend">
                                                                             <legend id="regionLegend" class="sr_only">지역 선택</legend>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegionAll" class="chkRegion" value="ALL" checked="true">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegionAll" class="chkRegion" value="ALL" checked="true">
                                                                                 <label for="chkRegionAll">전체</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion1" class="chkRegion" value="1">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion1" class="chkRegion" value="1">
                                                                                 <label for="chkRegion1">서울</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion2" class="chkRegion" value="2">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion2" class="chkRegion" value="2">
                                                                                 <label for="chkRegion2">부산</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion3" class="chkRegion" value="3">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion3" class="chkRegion" value="3">
                                                                                 <label for="chkRegion3">대구</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion4" class="chkRegion" value="4">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion4" class="chkRegion" value="4">
                                                                                 <label for="chkRegion4">인천</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion5" class="chkRegion" value="5">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion5" class="chkRegion" value="5">
                                                                                 <label for="chkRegion5">광주</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion6" class="chkRegion" value="6">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion6" class="chkRegion" value="6">
                                                                                 <label for="chkRegion6">대전</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion7" class="chkRegion" value="7">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion7" class="chkRegion" value="7">
                                                                                 <label for="chkRegion7">울산</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion8" class="chkRegion" value="8">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion8" class="chkRegion" value="8">
                                                                                 <label for="chkRegion8">세종</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion9" class="chkRegion" value="9">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion9" class="chkRegion" value="9">
                                                                                 <label for="chkRegion9">경기</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion10" class="chkRegion" value="10">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion10" class="chkRegion" value="10">
                                                                                 <label for="chkRegion10">충북</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion11" class="chkRegion" value="11">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion11" class="chkRegion" value="11">
                                                                                 <label for="chkRegion11">충남</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion12" class="chkRegion" value="12">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion12" class="chkRegion" value="12">
                                                                                 <label for="chkRegion12">전북</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion13" class="chkRegion" value="13">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion13" class="chkRegion" value="13">
                                                                                 <label for="chkRegion13">전남</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion14" class="chkRegion" value="14">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion14" class="chkRegion" value="14">
                                                                                 <label for="chkRegion14">경북</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion15" class="chkRegion" value="15">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion15" class="chkRegion" value="15">
                                                                                 <label for="chkRegion15">경남</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion16" class="chkRegion" value="16">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion16" class="chkRegion" value="16">
                                                                                 <label for="chkRegion16">강원</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegion17" class="chkRegion" value="17">
+                                                                                <input type="checkbox" class="new_chkbox" name="chkRegion" id="chkRegion17" class="chkRegion" value="17">
                                                                                 <label for="chkRegion17">제주</label>
                                                                             </span>
                                                                         </fieldset>
