--- a/pc/UI_ADHPAbP06.html
+++ b/pc/UI_ADHPAbP06.html
@@ -225,75 +225,75 @@
                                                                         <fieldset class="box_chk-group" role="group" aria-labelledby="PopregionLegend">
                                                                             <legend id="PopregionLegend" class="sr_only">지역 선택</legend>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegionAll" class="PopchkRegion" value="ALL">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegionAll" class="PopchkRegion" value="ALL">
                                                                                 <label for="PopchkRegionAll">전체</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion1" class="PopchkRegion" value="1">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion1" class="PopchkRegion" value="1">
                                                                                 <label for="PopchkRegion1">서울</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion2" class="PopchkRegion" value="2">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion2" class="PopchkRegion" value="2">
                                                                                 <label for="PopchkRegion2">부산</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion3" class="PopchkRegion" value="3">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion3" class="PopchkRegion" value="3">
                                                                                 <label for="PopchkRegion3">대구</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion4" class="PopchkRegion" value="4">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion4" class="PopchkRegion" value="4">
                                                                                 <label for="PopchkRegion4">인천</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion5" class="PopchkRegion" value="5">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion5" class="PopchkRegion" value="5">
                                                                                 <label for="PopchkRegion5">광주</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion6" class="PopchkRegion" value="6">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion6" class="PopchkRegion" value="6">
                                                                                 <label for="PopchkRegion6">대전</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion7" class="PopchkRegion" value="7">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion7" class="PopchkRegion" value="7">
                                                                                 <label for="PopchkRegion7">울산</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion8" class="PopchkRegion" value="8">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion8" class="PopchkRegion" value="8">
                                                                                 <label for="PopchkRegion8">세종</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion9" class="PopchkRegion" value="9">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion9" class="PopchkRegion" value="9">
                                                                                 <label for="PopchkRegion9">경기</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion10" class="PopchkRegion" value="10">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion10" class="PopchkRegion" value="10">
                                                                                 <label for="PopchkRegion10">충북</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion11" class="PopchkRegion" value="11">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion11" class="PopchkRegion" value="11">
                                                                                 <label for="PopchkRegion11">충남</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion12" class="PopchkRegion" value="12">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion12" class="PopchkRegion" value="12">
                                                                                 <label for="PopchkRegion12">전북</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion13" class="PopchkRegion" value="13">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion13" class="PopchkRegion" value="13">
                                                                                 <label for="PopchkRegion13">전남</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion14" class="PopchkRegion" value="14">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion14" class="PopchkRegion" value="14">
                                                                                 <label for="PopchkRegion14">경북</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion15" class="PopchkRegion" value="15">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion15" class="PopchkRegion" value="15">
                                                                                 <label for="PopchkRegion15">경남</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion16" class="PopchkRegion" value="16">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion16" class="PopchkRegion" value="16">
                                                                                 <label for="PopchkRegion16">강원</label>
                                                                             </span>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegion17" class="PopchkRegion" value="17">
+                                                                                <input type="checkbox" class="new_chkbox" name="PopchkRegion" id="PopchkRegion17" class="PopchkRegion" value="17">
                                                                                 <label for="PopchkRegion17">제주</label>
                                                                             </span>
                                                                         </fieldset>
