--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                     <td></td>
                     <td>운영 대학 검색 팝업</td>
                     <td>UI_ADHPAbP06</td>
-                    <td class="status">작업중</td>
-                    <td>배경사이트 html 수정예정</td>
+                    <td class="status">완료</td>
+                    <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbP06.html" target="_blank">PC</a>
                         <a href="./mobile/UI_ADHPAbP06.html" target="_blank" class="none">MO</a>
@@ -200,11 +200,11 @@
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록</td>
                     <td>UI_ADHPAbP07</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/UI_ADHPAbP07.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAbP07.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -219,8 +219,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/UI_ADHPAbP08.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAbP08.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -251,8 +251,8 @@
                     <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="./UI_ADHPAbP10.html" target="_blank">PC</a>
-                        <a href="./UI_ADHPAbP10.html" target="_blank" class="none">MO</a>
+                        <a href="./pc/UI_ADHPAbP10.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAbP10.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -264,11 +264,11 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 목록 없음</td>
                     <td>UI_ADHPAcM01</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/UI_ADHPAcM01.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAcM01.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -280,11 +280,11 @@
                     <td>프로그램 신청</td>
                     <td>프로그램 신청 - 목록 있음</td>
                     <td>UI_ADHPAcM02</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/UI_ADHPAcM02.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAcM02.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -328,11 +328,11 @@
                     <td>참여프로그램 관리</td>
                     <td>참여 프로그램 관리 - 목록 없음</td>
                     <td>UI_ADHPAdM01</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/UI_ADHPAdM01.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAdM01.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
