--- a/pc/UI_ADHPAbP10.html
+++ b/pc/UI_ADHPAbP10.html
@@ -261,7 +261,7 @@
                                                             <p>“졸업생 특화 프로그램” 참여 신청과 관련하여 개인정보를 수집·이용·제공하기 위한 동의 절차</p>
                                                             <strong>&#x203B; 전문보기 후 개인정보 수집·이용·제공 동의를 선택할 수 있습니다.</strong>
                                                         </div>
-                                                        <button type="button" class="btn_view_doc btn small type02" aria-label="개인정보 수집·이용·제공 동의서 전문보기" onclick="location.href='./UI_ADHPAbP10.html'"><span class="s1_r">전문보기</span></button>
+                                                        <button type="button" class="btn_view_doc btn small type02" aria-label="개인정보 수집·이용·제공 동의서 전문보기" onclick=""><span class="s1_r">전문보기</span></button>
                                                     </div>
                                                     
                                                     <div class="agm_cho">
@@ -293,7 +293,7 @@
                                                 </div>
 
                                                 <div class="btn_box mt40">
-                                                    <button type="button" class="btn big type02 btn_s_r" aria-label="신청 목록 페이지로 이동" onclick="window.location.href='./UI_ADHPAcS03.html';">목록</button>
+                                                    <button type="button" class="btn big type02 btn_s_r" aria-label="신청 목록 페이지로 이동" onclick="">목록</button>
                                                     <button type="submit" id="srchBtn" class="btn big fill type01" onclick="">제출</button>
                                                 </div>
                                             </div>
@@ -313,7 +313,7 @@
                                                     <h5 class="t2_sb">“취업지원 서비스 제공”을 위한 「개인정보 수집·이용 및 제3자 활용 동의서」</h5>
                                                     <div class="consent_area type_1">
                                                         <div class="chk_box">
-                                                            <input type="checkbox" id="agreeAll" name="consent_all" value="Y" />
+                                                            <input type="checkbox" class="new_chkbox" id="agreeAll" name="consent_all" value="Y" />
                                                             <label for="agreeAll"><span class="b1_sb">모두 동의합니다.</span></label>
                                                         </div>
                                                         <p class="b1_r">「개인정보보호법」을 준수하며, 개인정보 활용에 대한 고지를 통하여 참여자의 소중한 개인정보의 용도와 활용 방식, 개인정보보호를 위한 조치내용을 사전에 안내하고자 합니다. 개인정보 동의일부터 졸업 이후 5년까지 취업정보·컨설팅·직업 훈련 등 고용서비스 안내제공 및 위업 여부를 확인하고자 개인정보를 수집합니다.</p>
