--- a/pc/UI_ADHPAaM01.html
+++ b/pc/UI_ADHPAaM01.html
@@ -68,7 +68,7 @@
 
 
                                 <div class="support">
-                                    <div class="youth">
+                                    <div class="youth allcare">
                                         <div class="gsprog_uni">
                                             <div class="step_cont">
                                                 <h3 class="t2_sb mb16">신청 및 참여 절차</h3>
