--- a/pc/UI_ADHPAbP07.html
+++ b/pc/UI_ADHPAbP07.html
@@ -48,7 +48,7 @@
                             <!-- 콘텐츠영역 시작 -->
                             <div class="tab_wrap bg_type" data-role="tab">
                                 <div class="mypage">
-                                    <div class="progmg">
+                                    <div class="progmg allcare">
                                         <ul class="tab_title topTab" role="tablist">
                                             <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>참여신청서</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여 프로그램</span></button></li>
@@ -214,7 +214,7 @@
                                                     <article class="box_form_content">
                                                         <table class="search_table">
                                                         <colgroup>
-                                                            <col style="width:20%;">
+                                                            <col style="width: 88px;">
                                                             <col>
                                                         </colgroup>
                                                         <tbody>
