--- a/pc/UI_ADHPAeM01.html
+++ b/pc/UI_ADHPAeM01.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>완료 페이지 - 수정 완료</title>
+        <title>참여신청서 - 목록 없음</title>
         <script src="../pc/include/js/head.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
@@ -51,35 +51,18 @@
                                 <div class="mypage">
                                     <div class="progmg allcare">
                                         <ul class="tab_title topTab" role="tablist">
-                                            <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>참여신청서</span></button></li>
-                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여 프로그램</span></button></li>
-                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>상담 이력</span></button></li>
                                             <!-- D: 활성화시 class[active] add -->
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여신청서</span></button></li>
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여 프로그램</span></button></li>
+                                            <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>상담 이력</span></button></li>
                                         </ul>
 
-                                        <div class="donepage">
-                                            <div class="done_notice">
-                                                <figure class="mb24"><img src=""><img src="./images/mypage/ico80_chk_green.svg"></figure>
-                                                <p class="h2_sb">수정이 완료 되었습니다.</p>
-                                            </div>
-
-                                            <ul class="done_info mt80">
-                                                <li>
-                                                    <div class="tit"><p>성명</p></div>
-                                                    <div class="desc"><p>홍길동</p></div>
-                                                </li> 
-                                                <li>
-                                                    <div class="tit"><p>참여 대학</p></div>
-                                                    <div class="desc"><p>AAA 대학교</p></div>
-                                                </li> 
-                                                <li>
-                                                    <div class="tit"><p>신청일</p></div>
-                                                    <div class="desc"><p>2025-01-01</p></div>
-                                                </li>
-                                            </ul>
-
-                                            <div class="done_btn mt40">
-                                                <a href="#none" class="btn big fill type01" onclick="" aria-label="졸업생 특화프로그램 페이지로 이동">확인</a>
+                                        <div class="pa_page_empty mt80 pt40">
+                                            <figure class="mb24"><img src=""><img src="./include/images/ico60_warning_navy.svg"></figure>
+                                            <p class="t3_sb">상담이 아직 등록되지 않았습니다. <br>대학에서 상담 내용을 등록 후 조회할 수 있습니다.</p>
+                                            <div class="box_btn_wrap mt40">
+                                                <a href="" class="btn big type02 btn_s_r">이전</a>
+                                                <a href="" class="btn big type01 fill">확인</a>
                                             </div>                                  
                                         </div>
                                     </div>
