--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                     <td></td>
                     <td>참여신청서 - 조회</td>
                     <td>UI_ADHPAbS04</td>
-                    <td class="status">작업중</td>
-                    <td>신청 및 처리현황 부분 보류</td>
+                    <td class="status">완료</td>
+                    <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS04.html" target="_blank">PC</a>
                         <a href="./mobile/UI_ADHPAbS04.html" target="_blank" class="none">MO</a>
@@ -168,11 +168,11 @@
                     <td></td>
                     <td>참여신청서 - 회수(수정)</td>
                     <td>UI_ADHPAbS05</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/UI_ADHPAbS05.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAbS05.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -216,7 +216,7 @@
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록(계열분류)</td>
                     <td>UI_ADHPAbP08</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbP08.html" target="_blank">PC</a>
@@ -232,11 +232,11 @@
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록(검색결과)</td>
                     <td>UI_ADHPAbP09</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/UI_ADHPAbP09.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAbP09.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -392,11 +392,11 @@
                     <td></td>
                     <td>상담이력 - 목록 없음</td>
                     <td>UI_ADHPAeM01</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/UI_ADHPAeM01.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAeM01.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -408,11 +408,11 @@
                     <td></td>
                     <td>상담이력 - 목록 있음</td>
                     <td>UI_ADHPAeM02</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank" class="none">PC</a>
-                        <a href="" target="_blank" class="none">MO</a>
+                        <a href="./pc/UI_ADHPAeM02.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAeM02.html" target="_blank" class="none">MO</a>
                     </td>
                 </tr>
                 <tr>
