--- a/pc/UI_ADHPAaM02.html
+++ b/pc/UI_ADHPAaM02.html
@@ -69,7 +69,7 @@
 
 
                                 <div class="support">
-                                    <div class="youth">
+                                    <div class="youth allcare">
                                         <div class="gsprog_uni">
                                             <div class="step_cont">
                                                 <h3 class="t2_sb m-b16">신청 및 참여 절차</h3>
