--- a/pc/UI_ADHPAbM01.html
+++ b/pc/UI_ADHPAbM01.html
@@ -49,7 +49,7 @@
                             <!-- 콘텐츠영역 시작 -->
                             <div class="tab_wrap bg_type" data-role="tab">
                                 <div class="mypage">
-                                    <div class="progmg">
+                                    <div class="progmg allcare">
                                         <ul class="tab_title topTab" role="tablist">
                                             <!-- D: 활성화시 class[active] add -->
                                             <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>참여신청서</span></button></li>
