--- a/pc/UI_ADHPAbM02.html
+++ b/pc/UI_ADHPAbM02.html
@@ -55,7 +55,7 @@
                             <!-- 콘텐츠영역 시작 -->
                             <div class="tab_wrap bg_type" data-role="tab">
                                 <div class="mypage">
-                                    <div class="progmg">
+                                    <div class="progmg allcare">
                                         <ul class="tab_title topTab" role="tablist">
                                             <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>참여신청서</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여 프로그램</span></button></li>
