--- a/pc/UI_ADHPAbP08.html
+++ b/pc/UI_ADHPAbP08.html
@@ -48,7 +48,7 @@
                             <!-- 콘텐츠영역 시작 -->
                             <div class="tab_wrap bg_type" data-role="tab">
                                 <div class="mypage">
-                                    <div class="progmg">
+                                    <div class="progmg allcare">
                                         <ul class="tab_title topTab" role="tablist">
                                             <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>참여신청서</span></button></li>
                                             <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여 프로그램</span></button></li>
@@ -214,7 +214,7 @@
                                                     <article class="box_form_content">
                                                         <table class="search_table">
                                                         <colgroup>
-                                                            <col style="width:20%;">
+                                                            <col style="width: 88px;">
                                                             <col>
                                                         </colgroup>
                                                         <tbody>
@@ -530,10 +530,10 @@
                                                                         <input type="radio" name="majorSelect" id="major10" />
                                                                         <label for="major10">
                                                                             <span class="radio_ui" aria-hidden="true"></span>
-                                                                            <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST 선택</span>
+                                                                            <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST 선택</span>
                                                                         </label>
                                                                     </div>
-                                                                    <label for="major10">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST</label>
+                                                                    <label for="major10">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST</label>
                                                                 </li>
                                                                 <li>
                                                                     <div class="new_radio_item">
